Gate `POST /board/` with the envvar `CREATE_TOKEN`
